# FastAPI-CRM

./: .env-example  .gitignore  Dockerfile  README.md  docker-compose.yml  grafana-dashboard.json  prometheus.yml  pyproject.toml  pytest.ini  requirements.txt
app/: config.py  database.py  exceptions.py  logger.py  main.py
app/admin/: auth.py  views.py
app/clients/: dao.py  models.py  router.py  schemas.py
app/dao/: base.py
app/migrations/: env.py
app/migrations/versions/: a1c1fc671564_initial_migration.py  e36e76cf0e67_initial_migration.py
app/orders/: dao.py  models.py  router.py  schemas.py
app/pages/: dependencies.py  router.py
app/paysmethods/: dao.py  models.py  router.py  schemas.py
app/performers/executors/: dao.py  models.py  router.py  schemas.py
app/performers/orders/: dao.py  models.py  router.py  schemas.py
app/performers/services/: dao.py  models.py  router.py  schemas.py
app/prometheus/: router.py
app/static/css/: menu.css  style.css
app/static/js/: add_executor.js  login.js  menu.js  order_num.js
app/statuses/: dao.py  models.py  router.py  schemas.py
app/tasks/: celery_task.py  email_template.py  tasks.py
app/templates/: base.html  login.html
app/templates/clients/: client_num.html  clients.html
app/templates/executors/: executors.html
app/templates/orders/: new_order.html  order_num.html  orders.html
app/templates/paysmethods/: paysmethods.html
app/templates/services/: services.html
app/tests/: conftest.py
app/tests/mock_files/: mock_clients.json  mock_executor_orders.json  (+6 more)
app/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
docker/: celery.sh
(+3 files in other folders)
